Adjust view of map and center it and fix overflow

--- a/app/assets/stylesheets/_map.scss
+++ b/app/assets/stylesheets/_map.scss
@@ -1,14 +1,3 @@
-#wrapper {
-  width: 960px;
-  margin: 30px auto 0;
-}
-
-#map {
-  width: 960px;
-  height: 580px;
-  position: relative;
-}
-
 .fill {
   fill: #fff;
 }
